third_party/WebKit/Source/core/paint/SVGClipPainter.h
@@ -30,12 +30,13 @@ public:
     // FIXME: Filters are also stateful resources that could benefit from having their state managed
     //        on the caller stack instead of the current hashmap. We should look at refactoring these
     //        into a general interface that can be shared.
-    bool prepareEffect(const LayoutObject&, const FloatRect&, const FloatRect&, GraphicsContext&, ClipperState&);
+    bool prepareEffect(const LayoutObject&, const FloatRect&, const FloatRect&, const FloatPoint&, GraphicsContext&, ClipperState&);
     void finishEffect(const LayoutObject&, GraphicsContext&, ClipperState&);
 
 private:
     // Return false if there is a problem drawing the mask.
-    bool drawClipAsMask(GraphicsContext&, const LayoutObject&, const FloatRect& targetBoundingBox, const FloatRect& targetPaintInvalidationRect, const AffineTransform&);
+    bool drawClipAsMask(GraphicsContext&, const LayoutObject&, const FloatRect& targetBoundingBox,
+        const FloatRect& targetPaintInvalidationRect, const AffineTransform&, const FloatPoint&);
 
     LayoutSVGResourceClipper& m_clip;
 };
